--- a/01-android/app/src/main/res/values-land/string.xml
+++ b/01-android/app/src/main/res/values-land/string.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="bienvenida">Bienvenida</string>
+    <string name="bienvenida">Bienvenida LAND</string>
+
 </resources>
