--- a/01-android/app/src/main/res/values/colors.xml
+++ b/01-android/app/src/main/res/values/colors.xml
@@ -7,12 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="color7">#FFFF00</color>
-    <color name="color8">#FF0000</color>
-    <color name="color1">#FFFF00</color>
-    <color name="color2">#FF0000</color>
-    <color name="color3">#FF12AA</color>
-    <color name="color4">#0000FF</color>
-    <color name="color5">#FFDD00</color>
-    <color name="color6">#FF00AA</color>
+    <color name="color1">#FF9800</color>
+    <color name="color2">#FFEB3B</color>
 </resources>
