--- a/01-android/app/src/main/res/values-land/string.xml
+++ b/01-android/app/src/main/res/values-land/string.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">Moviles2023A</string>
     <string name="bienvenida">Bienvenida LAND</string>
 
 </resources>
