--- a/Examen01-KV/app/src/main/res/layout/activity_floreria.xml
+++ b/Examen01-KV/app/src/main/res/layout/activity_floreria.xml
@@ -7,17 +7,32 @@
     tools:context=".Floreria">
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btn_crear_floreria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="96dp"
+        android:layout_marginBottom="24dp"
         android:text="Crear floreria"
-        app:layout_constraintBottom_toTopOf="@+id/_dynamic"
-        tools:layout_editor_absoluteX="125dp" />
+        app:layout_constraintBottom_toTopOf="@+id/rv_florerias"
+        app:layout_constraintEnd_toEndOf="@+id/rv_florerias"
+        app:layout_constraintStart_toStartOf="@+id/rv_florerias" />
 
-    <ListView
-        android:layout_width="353dp"
-        android:layout_height="406dp"
-        tools:layout_editor_absoluteX="29dp"
-        tools:layout_editor_absoluteY="244dp" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_florerias"
+        android:layout_width="355dp"
+        android:layout_height="394dp"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Florerias"
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="@+id/btn_crear_floreria"
+        app:layout_constraintStart_toStartOf="@+id/btn_crear_floreria"
+        tools:layout_editor_absoluteY="68dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
