--- a/Examen01-KV/app/src/main/res/layout/activity_main.xml
+++ b/Examen01-KV/app/src/main/res/layout/activity_main.xml
@@ -11,28 +11,31 @@
         android:layout_height="wrap_content"
         android:text="MENÚ"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btn_florerias"
+        app:layout_constraintEnd_toEndOf="@+id/btn_florerias"
+        app:layout_constraintStart_toStartOf="@+id/btn_florerias"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.06" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_florerias"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
         android:text="Menú florerias"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
-        app:layout_constraintEnd_toEndOf="@+id/button2"
-        app:layout_constraintStart_toStartOf="@+id/button2" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_flores"
+        app:layout_constraintEnd_toEndOf="@+id/btn_flores"
+        app:layout_constraintStart_toStartOf="@+id/btn_flores" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_flores"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="340dp"
         android:text="Menú flores"
-        tools:layout_editor_absoluteX="136dp"
-        tools:layout_editor_absoluteY="293dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.549"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
