--- a/Examen01-KV/app/src/main/res/layout/activity_crear_floreria.xml
+++ b/Examen01-KV/app/src/main/res/layout/activity_crear_floreria.xml
@@ -10,15 +10,17 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
         android:text="Registro de florería"
         android:textSize="34sp"
-        tools:layout_editor_absoluteX="63dp"
-        tools:layout_editor_absoluteY="30dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextPhone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="275dp"
+        android:layout_height="51dp"
         android:layout_marginTop="32dp"
         android:ems="10"
         android:inputType="phone"
@@ -30,8 +32,8 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="281dp"
+        android:layout_height="55dp"
         android:layout_marginTop="36dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -43,8 +45,8 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="276dp"
+        android:layout_height="48dp"
         android:layout_marginTop="44dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -56,8 +58,8 @@
 
     <CheckBox
         android:id="@+id/checkBox"
-        android:layout_width="213dp"
-        android:layout_height="49dp"
+        android:layout_width="280dp"
+        android:layout_height="48dp"
         android:layout_marginTop="40dp"
         android:text="Hace envio?"
         app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
