--- a/Examen01/app/src/main/res/layout/activity_crear_floreria.xml
+++ b/Examen01/app/src/main/res/layout/activity_crear_floreria.xml
@@ -49,11 +49,33 @@
         android:id="@+id/btn_guardar_floreria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="48dp"
         android:text="Guardar"
+        app:layout_constraintEnd_toEndOf="@+id/cb_hace_envio"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="@+id/cb_hace_envio"
+        app:layout_constraintTop_toBottomOf="@+id/cb_hace_envio" />
+
+    <CheckBox
+        android:id="@+id/cb_hace_envio"
+        android:layout_width="336dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="16dp"
+        android:text="¿Hace envio?"
         app:layout_constraintEnd_toEndOf="@+id/input_telefono"
-        app:layout_constraintHorizontal_bias="0.485"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/input_telefono"
         app:layout_constraintTop_toBottomOf="@+id/input_telefono" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Registro de floreria"
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
