--- a/01-android/app/src/main/res/layout/activity_main.xml
+++ b/01-android/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
         android:text="I. Implicito"
         app:layout_constraintBottom_toTopOf="@+id/btn_ir_list_view"
         app:layout_constraintEnd_toEndOf="@+id/btn_ir_list_view"
-        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/btn_ir_list_view" />
 
     <Button
@@ -81,5 +81,16 @@
         app:layout_constraintEnd_toEndOf="@+id/btn_sqlite"
         app:layout_constraintStart_toStartOf="@+id/btn_sqlite"
         app:layout_constraintTop_toBottomOf="@+id/btn_sqlite" />
+
+    <Button
+        android:id="@+id/btn_google_maps"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="36dp"
+        android:text="G MAPS"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_ir_intent_implicito"
+        app:layout_constraintEnd_toStartOf="@+id/btn_ir_intent_implicito"
+        app:layout_constraintTop_toTopOf="@+id/btn_ir_intent_implicito"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
