--- a/Deber3RecyclerViewInstagram/app/src/main/res/layout/activity_main.xml
+++ b/Deber3RecyclerViewInstagram/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:fontFamily="@font/lily_script_one"
         android:text="Instagram"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/rv_feed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.053"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,10 +22,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_feed"
-        android:layout_width="407dp"
-        android:layout_height="657dp"
+        android:layout_width="411dp"
+        android:layout_height="644dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="75dp" />
+        tools:layout_editor_absoluteY="88dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
