--- a/Deber3RecyclerViewInstagram/app/src/main/res/layout/item_feed.xml
+++ b/Deber3RecyclerViewInstagram/app/src/main/res/layout/item_feed.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_feed"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        tools:background="@color/black"
+        android:layout_width="411dp"
+        android:layout_height="411dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:background="@color/black" />
 
     <TextView
         android:id="@+id/tv_nombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="172dp"
-        android:layout_marginTop="44dp"
-        app:layout_constraintStart_toEndOf="@+id/iv_feed"
+        android:layout_marginTop="420dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/iv_feed"
+        app:layout_constraintHorizontal_bias="0.041"
+        app:layout_constraintStart_toStartOf="@+id/iv_feed"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Hola" />
 
@@ -27,12 +29,23 @@
         android:id="@+id/tv_numero"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="@+id/tv_nombre"
-        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tv_nombre"
         app:layout_constraintTop_toBottomOf="@+id/tv_nombre"
         tools:text="1" />
+
+    <TextView
+        android:id="@+id/tv_descripcion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_nombre"
+        app:layout_constraintStart_toEndOf="@+id/tv_nombre"
+        app:layout_constraintTop_toTopOf="@+id/tv_nombre"
+        app:layout_constraintVertical_bias="0.0"
+        tools:text="Lindo gatito" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
