--- a/Deber2-Sqlite/app/src/main/res/layout/activity_lista_florerias.xml
+++ b/Deber2-Sqlite/app/src/main/res/layout/activity_lista_florerias.xml
@@ -10,29 +10,28 @@
         android:id="@+id/btn_crear_floreria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:text="Crear"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <ListView
         android:id="@+id/lv_florerias"
-        android:layout_width="315dp"
-        android:layout_height="489dp"
-        android:layout_marginBottom="56dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_crear_floreria"
-        app:layout_constraintVertical_bias="0.783" />
+        android:layout_width="354dp"
+        android:layout_height="553dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="@+id/btn_crear_floreria"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="@+id/btn_crear_floreria"
+        app:layout_constraintTop_toBottomOf="@+id/btn_crear_floreria" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="28dp"
         android:text="Florerias"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
