--- a/Examen02/app/src/main/res/layout/activity_lista_florerias.xml
+++ b/Examen02/app/src/main/res/layout/activity_lista_florerias.xml
@@ -10,40 +10,42 @@
         android:id="@+id/btn_crear_floreria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="92dp"
+        android:layout_marginEnd="28dp"
         android:text="Crear"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/btn_cargar_florerias" />
 
     <ListView
         android:id="@+id/lv_florerias"
-        android:layout_width="315dp"
-        android:layout_height="516dp"
-        android:layout_marginBottom="56dp"
+        android:layout_width="354dp"
+        android:layout_height="553dp"
+        android:layout_marginTop="76dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="68dp"
+        android:layout_marginTop="28dp"
         android:text="Florerias"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_crear_floreria"
-        app:layout_constraintEnd_toStartOf="@+id/btn_crear_floreria"
-        app:layout_constraintTop_toTopOf="@+id/btn_crear_floreria"
-        app:layout_constraintVertical_bias="0.586" />
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_cargar_florerias"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="60dp"
         android:text="Cargar florerias"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
